# articulated

./: .gitignore  README.md  pyproject.toml
articulated/: __init__.py
articulated/analysis/: dimensionality.py  tuning.py  visualization.py
articulated/configs/estimation/: lstm.yaml  rnn.yaml
articulated/configs/rl/: baseline.yaml  baseline_tuned.yaml  baseline_tuned2.yaml  embedded.yaml
articulated/estimation/: datamodule.py  model.py  train.py
articulated/rl/: __init__.py  agent.py  environment.py  render.py  train.py
articulated/shared/: robot_arm.py
scripts/: run_commit.sh  run_remote.sh
tests/: __init__.py  test_datamodules.py  test_models.py
